--- a/graceportfolio/index.html
+++ b/graceportfolio/index.html
@@ -28,7 +28,7 @@
       </div>
     </nav>
   </header>
-  <!--content Area-->>
+  <!--content Area-->
   <div class="content">
     <p>
         <h1 class="head">Hi👋 <br>
@@ -48,7 +48,7 @@
 <div class="about">
   <img src="images/Grace.png" alt="potrait">
   <p>
-    <h3 class="about-note">
+    <h4 class="about-note">
       I'm Grace Akpoiroro, a UI/UX designer born in Nigeria and<br>
       currently living in Abuja.<br><br>
       I've been designing since August 2020. I've created<br>
@@ -60,7 +60,7 @@
       I am also a freelancer and I have worked with some amazing<br>
       clients, helping them to solve their business proiblems using<br>
       design.
-    </h3>
+    </h4>
   </p>
 </div>
 
@@ -72,79 +72,106 @@
 </section>
 
 <!--Workflow Item Area-->
-<div class="icon1">
-  <img src="images/Decore.png" alt="Helix Icon" class="helix-icon left">
-  <section class="i1">
-    <img src="images/Group.png" alt="Icon 1">
-    <h3>01</h3>
-  </section>
-  <p>
-    <h4>
-      Research<br><br>
-    </h4>
-  <h5>
-    I conduct online surveys and<br>
-    interviews to understand user<br>
-    needs and how users think and<br>
-    feel.
-  </h5>
-</p>
+<div class="box-grid">
+  <img src="images/Decore.png" alt="helix" class="helixleft">
+  <div class="box first">
+      <span class="icon">
+        <section class="nav-con">
+          <img src="images/Group.png" alt="Icon 2">
+          <h1>01</h1>
+        </section>
+      </span>
+      <span class="text">
+        <p>
+          <h3>
+            Research<br>
+          </h3>
+          <h4>
+            I conduct online surveys and<br>
+            interviews to understand user<br>
+            needs and how users think and<br>
+            feel.
+          </h4>
+        </p>
+      </span>
+  </div>
+  
+  <div class="box">
+    <span class="icon">
+      <section class="nav-con">
+        <img src="images/Group (1).png" alt="Icon 2">
+        <h1>02</h1>
+      </section>
+    </span>
+    <span class="text">
+      <p>
+        <h3>
+          Define & Ideate<br>
+        </h3>
+        <h4>
+          In define stage. I outline the<br>
+          problem statement focusing<br>
+          on the end user. In Ideate<br>
+          stage, I create sketches and lo-<br>
+          fi wireframes.
+        </h4>
+      </p>
+    </span>
+  </div>
+  
+  <div class="box">
+    <span class="icon">
+      <section class="nav-con">
+        <img src="images/Color wheel 1.png" alt="Icon 3">
+        <h1>03</h1>
+      </section>
+    </span>
+    <span class="text">
+      <p>
+        <h3>
+          Prototype<br>
+        </h3>
+        <h4>
+          I convert the lo-fi wireframes<br>
+          to high-fi prototypes that users<br>
+          can interact with.
+        </h4>
+      </p>
+    </span>
+  </div>
+  
+  <div class="box last">
+   <span class="icon">
+    <section class="nav-con">
+      <img src="images/Click 1.png" alt="Icon 4">
+      <h1>04</h1>
+    </section>
+   </span>
+    <span class="text">
+      <p>
+        <h3>
+          User Testing & Hand-Off<br>
+        </h3>
+        <h4>
+          I carry out unmoderated user<br>
+          testing with focus group and<br>
+          iterate on the design. Finally, I<br>
+          handoff to developers for<br>
+          implementation.
+        </h4>
+      </p>
+    </span>
+  </div>
+  <img src="images/Decore (1).png" alt="helix" class="helixright">
 </div>
+<hr class="separator">
 
-<div class="icon2">
-  <section class="i2">
-    <img src="images/Group (1).png" alt="Icon 2">
-    <h3>02</h3>
-  </section>
-  <p>
-    <h4>
-      Define & Ideate<br><br>
-    </h4>
-    <h5>
-      In define stage. I outline the<br>
-      problem statement focusing<br>
-      on the end user. In Ideate<br>
-      stage, I create sketches and lo-<br>
-      fi wireframes.
-    </h5>
-  </p>
+<!--Section 4-->
+<section id="case-section">
+  <img src="images/casestudy.png" alt="casestudy">
+</section>
+<div>
+  
 </div>
-
-<div class="icon3">
-  <section class="i3">
-    <img src="images/Color wheel 1.png" alt="Icon 3">
-    <h3>03</h3>
-  </section>
-  <p>
-    <h4>
-      Prototype
-    </h4>
-    <h5>
-      I convert the lo-fi wireframes<br>
-      to high-fi prototypes that users<br>
-      can interact with.
-    </h5>
-  </p>
-</div>
-
-<div class="icon4">
-  <section class="i4">
-    <img src="images/Click 1.png" alt="Icon 4">
-    <h3>04</h3>
-  </section>
-  <p>
-    <h4>
-      User Testing & Hand-Off
-    </h4>
-    <h5>
-      I carry out unmoderated user<br>
-      testing with focus group and<br>
-      iterate on the design. Finally, I<br>
-      handoff to developers for implementation.
-    </h5>
-  </p>
-  <img src="images/Decore (1).png" alt="Helix Icon" class="helix-icon right">
-</div>
-
 </body>
 </html>
