--- a/graceportfolio/index.html
+++ b/graceportfolio/index.html
@@ -23,7 +23,7 @@
         <li><a href="#Home" class="head">Home</a></li>
         <li><a href="#about-section" class="about-link">About</a></li>
         <li><a href="#Resume">Resume</a></li>
-        <li class="button-link"><a href="#Case Studies">Case studies</a></li>
+        <li class="button-link"><a href="#case-section">Case studies</a></li>
       </ul>
       </div>
     </nav>
@@ -170,8 +170,40 @@
 <section id="case-section">
   <img src="images/casestudy.png" alt="casestudy">
 </section>
-<div>
-  
+<div class="image-grid">
+  <div class="image image1"><img src="images/Frame 1.png" alt="Image 1"></div>
+  <div class="image image2"><img src="images/Frame 6.png" alt="Image 2"></div>
+  <div class="image image3"><img src="images/Frame 9.png" alt="Image 3"></div>
 </div>
+
+<hr class="separator">
+<!--Section 5-->
+<section id="workflow-section">
+  <img src="images/connect.png" alt="connect">
+</section>
+
+<div class="connect">
+  <p>
+    <h4>Feel free to reach out for collaboration or hust say "Hi"😃</i></h4>
+  </p>
+  <p>
+    <h3>graciahills17@gmail.com</h3>
+  </p>
+</div>
+<hr class="separator">
+<!--Section 6-->
+<footer>
+  <nav>
+    <div class="nav-contain">
+      <div class="container1">
+        <h4><p>&copy 2022 Grace Akpoiroro</p></h4> 
+       </div>
+  <ul class="navigation">
+    <li class="button-link"><a href="#linkedln">Linkedln</a></li>
+    <li class="button-link"><a href="#Bahance">Bahance</a></li>
+  </ul>
+    </div>
+  </nav>
+</footer>
 </body>
 </html>
